consumer/pac/manifests/deploy/controller-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelines-as-code-controller
  namespace: pipelines-as-code
spec:
  rules:
  - host: dummy-host
    http:
      paths:
      - backend:
          service:
            name: pipelines-as-code-controller
            port:
              number: 8080
        path: /
        pathType: Prefix
