consumer/pac/manifests/deploy/webhook-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelines-as-code-webhook
  namespace: pipelines-as-code
  annotations:
    route.openshift.io/termination: passthrough
spec:
  rules:
  - host: dummy-host
    http:
      paths:
      - backend:
          service:
            name: pipelines-as-code-webhook
            port:
              number: 443
        pathType: ImplementationSpecific
